<resources>

    <string name="app_name">Gym Dude</string>

    <!-- UI -->
    <string name="exercises">Übungen</string>
    <string name="workouts">Trainingspläne</string>
    <string name="settings">Einstellungen</string>
    <string name="days_ago_text">Vor %s Tagen</string>
    <string name="yesterday_text">Gestern</string>
    <string name="today_text">Heute</string>
    <string name="never_text">Noch nie</string>
    <string name="filter">Filtern</string>
    <string name="sort">Sortieren</string>
    <string name="search">Suchen</string>
    <string name="exercise_search_hint">Suche nach Übungen</string>

    <string-array name="array_exercise_sort_options">
        <item>aufsteigend nach Datum</item>
        <item>absteigend nach Datum</item>
        <item>aufsteigend nach Name</item>
        <item>absteigend nach Name</item>
    </string-array>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="content_exercise_sort_btn">Drücken um die Übungen zu sortieren</string>
    <string name="content_exercise_filter_btn">Drücken um die Übungen zu filtern</string>
    <string name="content_exercise_history_btn">Drücken um den Übungs Log zu öffnen</string>
    <string name="content_exercise_delete_btn">Drücken um diese Übung zu löschen</string>
    <string name="content_exercise_edit_btn">Drücken um diese Übung zu bearbeiten</string>
    <string name="content_workout_delete_btn">Drücken um dieses Training zu löschen</string>
    <string name="content_workout_drag_btn">Verändere die Reihenfolge des Trainingsplans durch Drag and Drop</string>
    <string name="content_workout_plan_history_btn">Drücken um den Trainingsplan Log zu öffnen</string>
    <string name="content_workout_plan_delete_btn">Drücken um diesen Trainingsplan zu löschen</string>
    <string name="content_workout_plan_edit_btn">Drücken um diesen Trainingsplan zu bearbeiten</string>
    <string name="content_workout_plan_add_btn">Drücken um einen Trainingsplan hinzuzufügen</string>

    <!-- ERRORS -->
    <string name="error_name_in_use">Name ist bereits vergeben</string>
    <string name="error_db">Datenbank Fehler</string>

</resources>
