<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="vm"
			type="de.itdude.gymdude.viewmodel.MenuViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.fragment.MenuFragment">

		<Button
			android:id="@+id/main_btn_workouts"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="@{() -> vm.showWorkout()}"
			android:text="@string/workouts"
			app:layout_constraintBottom_toTopOf="@+id/main_btn_exercises"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/main_btn_exercises"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="@{() -> vm.showExercises()}"
			android:text="@string/exercises"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/main_btn_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="@{() -> vm.showSettings()}"
			android:text="@string/settings"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/main_btn_exercises" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>