<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="vm"
			type="de.itdude.gymdude.viewmodel.ExerciseViewModel" />

	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:elevation="@dimen/elevation"
		android:theme="@style/Theme.Toolbar">

		<Spinner
			android:id="@+id/exercise_sort_spinner"
			style="@style/Spinner"
			android:layout_width="@dimen/space_l"
			android:layout_height="@dimen/space_l"
			android:layout_marginHorizontal="@dimen/space_m"
			android:background="@drawable/ic_sort"
			android:contentDescription="@string/content_exercise_sort_btn"
			android:entries="@array/array_exercise_sort_options"
			android:foreground="?android:attr/selectableItemBackground"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:onSelect="@{vm.onSort}" />

		<TextView
			android:id="@+id/exercise_label"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/exercises"
			android:textAlignment="center"
			android:textSize="@dimen/text_size_xl"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/exercise_search_view"
			app:layout_constraintStart_toEndOf="@+id/exercise_sort_spinner"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/exercises" />

		<androidx.appcompat.widget.SearchView
			android:id="@+id/exercise_search_view"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			app:autoCollapse="@{true}"
			app:closeIcon="@drawable/ic_clear"
			app:collapsedWidth="@{@dimen/space_xxl}"
			app:hideOnExpand="@{exerciseLabel}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/exercise_filter_spinner"
			app:layout_constraintStart_toEndOf="@+id/exercise_label"
			app:layout_constraintTop_toTopOf="parent"
			app:onQuery="@{vm}"
			app:queryHint="@string/exercise_search_hint"
			app:searchIcon="@drawable/ic_search"
			tools:layout_width="@dimen/space_xl" />

		<Spinner
			android:id="@+id/exercise_filter_spinner"
			android:layout_width="@dimen/space_l"
			android:layout_height="@dimen/space_l"
			android:layout_marginEnd="@dimen/space_m"
			android:background="@drawable/ic_filter"
			android:contentDescription="@string/content_exercise_filter_btn"
			android:foreground="?android:attr/selectableItemBackground"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>